# diplom

./: .gitignore  pyproject.toml
diplom/: cli.py  config.py  geo.py  shared_constants.py  torch_device.py  world.py
diplom/cli/: __init__.py  __main__.py  app.py  defaults.py  demos.py  download.py  greedy.py  manual.py  profile.py  rollout.py  tensorboard.py  train.py  training_options.py  viz.py
diplom/data/: era5_download.py  era5_manifest.py  era5_paths.py
diplom/dev/: parallel_ppo.py
diplom/dev/profiling/: cpu.py  memory.py  runner.py
diplom/dev/tensorboard/: export.py  summary.py
diplom/envs/: __init__.py  balloon_env.py  constants.py  factory.py  wind_probes.py
diplom/envs/observations/: __init__.py  default.py  minimal.py  types.py
diplom/envs/rewards/: __init__.py  default.py  goal_only.py  long_horizon.py  no_regression.py  (+6 more)
diplom/rl/: pretraining.py
diplom/sim/: constants.py  factory.py  greedy.py  rollout.py  simulation.py
diplom/train/: clip_log_std_callback.py  cpu_profiling.py  curriculum_callback.py  ent_coef_schedule_callback.py  env_info_log_keys.py  episode_length_curriculum_callback.py  episode_stats_callback.py  info_logging_callback.py  parallel_ppo.py  policy_rollout_worker.py  policy_shmem_rollout_vec_env.py  ppo_policy.py  ppo_runner.py  ppo_worker_rollout.py  profiling.py  run_dirs.py  shmem_vec_env.py  target_reach_curriculum_callback.py  tensorboard_export.py  tensorboard_summary.py  trajectory_callback.py  trajectory_render_worker.py  trajectory_steps_io.py
diplom/trajectory/: demos.py  replay.py  smoothing.py  steps_io.py
diplom/viz/: __init__.py  balloon_simulation.py  constants.py  hud.py  particles.py  trajectory_plot.py  visualization_runner.py  wind_plot.py
diplom/wind/: compare_interpolation.py  constants.py  factory.py  interp.py  trilinear.py
(+26 files in other folders)
