[project]
name = "diplom"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "xarray (>=2026.2.0,<2027.0.0)",
    "dask (>=2026.3.0,<2027.0.0)",
    "netcdf4 (>=1.7.4,<2.0.0)",
    "h5netcdf (>=1.8.1,<2.0.0)",
    "cfgrib (>=0.9.15.1,<0.10.0.0)",
    "eccodes (>=2.46.0,<3.0.0)",
    "cdsapi (>=0.7.5,<0.8.0)",
    "pyvista (>=0.47.1,<0.48.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "stable-baselines3 (>=2.7.1,<3.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
diplom = "diplom.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0.0",
    "memray>=1.15.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99
target-version = "py311"
exclude = [".venv", "venv"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.8.0"
black = ">=24.10.0"
mypy = ">=1.13.0"
types-requests = ">=2.32.0.0"
memray = ">=1.15.0"
